Fix remaining blank space on Firefox

--- a/src/style/_brand.scss
+++ b/src/style/_brand.scss
@@ -81,15 +81,14 @@
 
   .apinf-logo {
     position: relative;
-    bottom: .25rem;
     left: calc(100% - 12rem);
 
     width: 12rem;
-    height: 3.5rem;
+    height: 3rem;
 
     span {
       position: absolute;
-      top: .25rem;
+      top: 0;
       right: .5rem;
 
       height: .75rem;
@@ -104,7 +103,7 @@
     img {
       position: absolute;
       right: .5rem;
-      bottom: .25rem;
+      bottom: 0;
 
       height: 2rem;
     }
